plyr 0.1.10 (2010-XX-X) ---------------------------------------------------

* arrange: a new helper method for reordering a data frame. 
* desc makes it easy to sort any vector in descending order
* d*ply now accepts NULL for splitting variables, indicating that the data should not be split
* plyr no longer exports internal functions, many of which were causing clashes with other packages

Speed improvements

* another rewrite of rbind.fill to increase speed 
* tweaks to splitter_d so now much faster when many combinations of the factors do not occur in the data (using ninteraction instead of interaction)

Bug fixes:

* each: scoping bug fixed, thanks to Yasuhisa Yoshida for the bug report
* ninteraction now preserves NAs
* splitter_d: fixed ordering bug when .drop = FALSE
* list_to_dataframe is more consistent when processing a single data frame
* leaving .fun as NULL now always returns list (thanks to Stavros Macrakis for the bug report)
* progress bars guaranteed to terminate even if **ply prematurely terminates
* labels from a*ply now respect options(stringAsFactors)


plyr 0.1.9 (2009-06-23) ---------------------------------------------------

* fix bug in rbind.fill when NULLs present in list
* improve each to recognise when all elements are numeric
* fix labelling bug in d*ply when .drop = FALSE
* additional methods for quoted objects
* add summarise helper - this function is like transform, but creates a new data frame rather than reusing the old (thanks to Brendan O'Connor for the neat idea)

plyr 0.1.8 (2009-04-20) ---------------------------------------------------

* made rbind a little faster (~20%) using an idea from Richard Raubertas
* daply now works correctly when splitting variables that contain empty factor levels

plyr 0.1.7 (2009-04-15) ---------------------------------------------------

Ensure that rbind.fill copies attributes.

plyr 0.1.6 (2009-04-15) ---------------------------------------------------

Improvements:
